--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -67,22 +67,28 @@ a.bnt__log.Link {
 }
 .admin__links {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
-  margin: 25px auto;
-  width: 70%;
+  margin: 15px 5.5% 25px 5.5%;
+  width: 89%;
 }
 .admin__link {
   color: white;
   font-size: larger;
-  width: 500px;
-  height: 60px;
+  width: 646px;
+  height: 62px;
   display: flex;
   justify-content: center;
   border-radius: 15px;
   background-color: #2D4478;
   text-decoration: none;
-  margin: 15px;
+  margin: 15px 0 10px;
   padding: 7.5px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.stage_name {
+  margin: 15px 5.5%;
+}
+.addPng{
+  width: 45px;
 }
