--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -84,6 +84,8 @@ a.bnt__log.Link {
   text-decoration: none;
   margin: 15px 0 10px;
   padding: 7.5px;
+  border: none;
+  cursor: pointer;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .stage_name {
